<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/familyCreateDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_regular"
            android:text="@string/create_family"
            android:textSize="36dp"></TextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/familyCreateSetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/familyCreateDescription"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/edit_text_family_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/type_family_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/familyCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/familyCreateSetName"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_family_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/type_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/familyCreatePasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/familyCreatePassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_family_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/type_password_again"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/familyCreateConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/familyCreatePasswordRepeat"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create"
            android:textColor="@color/textColorPrimary" />
    </RelativeLayout>
</LinearLayout>