<resources>
    <string name="app_name">Family Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="create_family">Create Family</string>
    <string name="join_family">Join Family</string>
    <string name="view_family">View Family</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="sign_out_msg">Successfully Sign Out.</string>
    <string name="type_password_again">Please enter password again</string>
    <string name="type_password">Please enter password</string>
    <string name="type_family_name">Please enter family name</string>
    <string name="create">Create</string>
    <string name="please_enter_family_id_password">Please enter family account number and password to join your family</string>
    <string name="confirm_join_family">Confirm to join family</string>
    <string name="all">All</string>
    <string name="category">Category</string>
    <string name="show">Show</string>
    <string name="home_page">Home</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="change_password">Change Password</string>
    <string name="change_location_password">Change Item Location Password</string>
    <string name="account_capital">ACCOUNT</string>
    <string name="type_item_name">Please enter item name</string>
    <string name="choose_image">choose an image</string>
    <string name="add_item">add item</string>
    <string name="type_item_description">Please enter item description</string>
    <string name="transition_test" translatable="false">test</string>
    <string name="detail_no_item">No Item</string>
    <string name="detail_edit">Edit</string>
    <string name="detail_download">Download</string>
    <string name="detail_share">Share</string>
    <string name="detail_delete">Delete</string>
    <string name="detail_delete_success">Image deleted</string>
    <string name="detail_delete_fail">Failed for deleting the item</string>
    <string name="edit_last_original_image_cannot_delete">Cannot delete last
        original image</string>
    <string name="edit_confirm">CONFIRM CHANGE</string>
    <string name="edit_date">Double click to change date</string>
    <string name="edit_visibility">Visibility</string>
    <string name="edit_location">Location</string>
    <string name="edit_enter_password_to_view_location">Enter password to view</string>
    <string name="edit_pass_down_text">Choose a family member</string>
    <string name="edit_pass_down_btn">PASS DOWN</string>
    <string name="edit_pass_down_to">Pass down To</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_password_required_for_location">Password is required for Location</string>
    <string name="edit_ok">Ok</string>
    <string name="edit_location_password_incorrect">Password Incorrect</string>
    <string name="edit_dialog_location_text">Location</string>
    <string name="edit_dialog_new_location">New Location</string>
    <string name="edit_dialog_confirm_change">Change</string>
    <string name="edit_dialog_view_location">View</string>
    <string-array name="privacy_options">
        <item>Visible by family</item>
        <item>Keep it private</item>
    </string-array>
    <string name="query_hints">name/age</string>
    <string name="there_is_no_item_in_this_category">There is no item in this category</string>
    <string name="item_name_should_not_leave_blank">Item name should not leave blank</string>
    <string name="please_select_at_least_one_image">Please select at least one image</string>
    <string name="uploading">Uploading</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="upload_success">Upload Success!</string>
    <string name="Item_create_success">Item Created successfully!</string>
    <string name="of">" of "</string>
    <string name="finished">finished</string>
    <string name="image">image</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="please_enter_the_password_again">Please enter the password again</string>
    <string name="two_password_are_not_same">Two passwords are not same</string>
    <string name="family_created_successfully">Family Created Successfully</string>
    <string name="family_id_not_exist">Family Id is not correct!</string>
    <string name="password_is_incorrect">Password is not correct!</string>
    <string name="join_family_successfully">Join family successful!</string>
    <string name="delete_from_this_category">Delete From This Category</string>
    <string name="get_read_permission">Already get the permission to access photos</string>
    <string name="please_pick_date_for_item">Double click to pick a date for
        item</string>
    <string name="no_items_for_the_show_page">No Items For The Show Page</string>
    <string name="reset_email_message">The reset password email has been sent, please click the link in the email to reset your email.</string>
    <string name="password_rest_success">Email reset successful!</string>
    <string name="letter">Letter</string>
    <string name="instrument">Instrument</string>
    <string name="photo">Photo</string>
    <string name="others">Others</string>
    <string name="complete_delete">Delete from category and all</string>
    <string name="password_cannot_be_blank">Password cannot be blank</string>
    <string name="date">Date</string>
    <string name="description">Item description</string>
    <string name="help_and_feedback"><![CDATA[Help&feedback]]></string>
    <string name="about">About</string>
    <string name="app_version">1.0</string>
    <string name="version">Version</string>
    <string name="dev_email_address">h1.team.developer@gmail.com</string>
    <string name="ask_us_message">Have a question? Ask us.</string>
    <string name="help_message">If you have any question about this app, please contact help team email.</string>
    <string name="term_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_service_url" translatable="false">https://h1teamdeveloper.wixsite.com/term-of-service</string>
    <string name="privacy_policy_url" translatable="false">https://h1teamdeveloper.wixsite.com/privacy-policy</string>
    <string name="type_item_material">Please enter item material</string>
    <string name="material">Material</string>
    <string name="update_user_info">Update user information</string>
    <string name="edit_user_info">Edit</string>
    <string name="username">Name</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="family">Family</string>
    <string name="family_name_show">Family name:</string>
    <string name="family_id_show">Family id:</string>
    <string name="family_members">Family members</string>
    <string name="change_family_name">Change Family Name</string>
    <string name="change_family_password">Change Family Password</string>
    <string name="sort_name_asc">Ascending sort by item name</string>
    <string name="sort_name_desc">Descending sort by item name</string>
    <string name="sort_time_asc">Ascending sort by date</string>
    <string name="sort_time_desc">Descending sort by date</string>
    <string name="new_family_name">New Family Name</string>
    <string name="new_family_password">New Family Password</string>
    <string name="reauth">Please enter your account password first:</string>
    <string name="owner">Owner</string>
    <string name="change_user_photo">User name and image</string>
    <string name="please_enter_location">Enter item storing location (only
        visible by yourself)</string>
    <string name="you_have_not_permission_to_delete_this_item_since_you_are_not_the_owner_of_this_item">You have not permission to delete this item, since you are not the owner of this item.</string>
    <string name="tip">Tip</string>
</resources>